# enterprise-data-analyst-ai-agent

./: .gitignore  README.md  create_sample_db.py  example.db  first_toy_example.db  inspect_db.py  pyproject.toml
text2sql_app/: __init__.py  main.py
text2sql_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
text2sql_app/agents/: execution_agent.py  insight_agent.py  intent_agent.py  recommendation_agent.py  schema_agent.py  sql_generator.py  sql_planner.py  sql_validator.py  viz_agent.py
text2sql_app/api/: __init__.py  routes.py  schemas.py
text2sql_app/core/: config.py  db.py  llm.py  logging.py  schema_models.py  security.py  sql_safety.py
text2sql_app/core/providers/: anthropic_provider.py  azure_openai_provider.py  openai_provider.py
text2sql_app/services/: connection_service.py  orchestrator.py
text2sql_app/tests/: test_orchestrator_smoke.py  test_sql_safety.py
text2sql_app/ui/: streamlit_app.py
