[project]
name = "text2sql_app"
version = "0.1.0"
description = "Enterprise-ready Text-to-SQL Analytics Platform (FastAPI + Agno)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "cryptography>=41.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "tenacity>=8.2",
  "sqlparse>=0.5.0",
  "plotly>=5.18",
  "pandas>=2.1",
  "agno>=0.0.70",
  "asyncpg=0.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100